--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,7 +140,7 @@ body {
 
 .meta {
     display: flex;
-    width: 696px;
+    width: 96%;
     height: 160px;
     background: #F2F2F2;
     border-radius: 15px;
@@ -177,7 +177,7 @@ body {
 }
 
 .time {
-    width: 696px;
+    width: 96%;
     height: 120px;
     display: flex;
     background: rgba(243, 234, 255, 0.2);
@@ -223,7 +223,7 @@ body {
 }
 
 .category {
-    width: 696px;
+    width: 96%;
     display: flex;
     justify-content: space-between;
 }
@@ -288,8 +288,4 @@ body {
     flex-direction: column;
     padding-top: 21px;
     margin-right: -80px;
-}
-
-.img-agachamento {
-    
 }
